Resources/ARM Templates/Infrastructure/networkSecurityGroups.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "resources": [{
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "OctopusNSG",
        "tags": "[resourceGroup().tags]",
        "apiVersion": "2016-12-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "securityRules": [{
                "name": "HTTP",
                "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            }, {
                "name": "RDP",
                "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3389",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 999,
                    "direction": "Inbound"
                }
            }]
        }
    }, {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "TeamCityNSG",
        "tags": "[resourceGroup().tags]",
        "apiVersion": "2016-12-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "securityRules": [{
               "name": "HTTP",
                "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            }, {
                "name": "OctopusTentacle",
                "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "10933",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 200,
                    "direction": "Inbound"
                }
            }, {
                "name": "RDP",
                "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3389",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 999,
                    "direction": "Inbound"
                }
            }]
        }
    }, {
        "name": "LinuxNSG",
        "type": "Microsoft.Network/networkSecurityGroups",
        "tags": "[resourceGroup().tags]",
        "apiVersion": "2016-12-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "securityRules": [{
                "name": "HTTP",
                "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            }, {
                "name": "SSH",
                "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "22",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 999,
                    "direction": "Inbound"
                }
            }]
        }
    }]
}
